Fri May  7 13:37:44 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * orbsvcs/tests/AVStreams/Simple_Two_Stage/sender.cpp (pace_data):
          Commented out the rewind() call.  Thanks to Inma Perea <inma dot
          perea dot fdz at gmail dot com> for reporting this.

        * orbsvcs/tests/AVStreams/Simple_Two_Stage/receiver.cpp
          (dump_samples): changed the last parameter to the fopen() method
          to "rb" to handle binary files.  Thanks to Inma Perea <inma dot
          perea dot fdz at gmail dot com> for reporting this.
  
        * orbsvcs/tests/AVStreams/Simple_Two_Stage/sender.cpp (init):
          changed the last parameter to the fopen() method to "wb" to
          handle binary files.

Fri May  7 16:11:09 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp(gen_conn_hdr_includes):
        
          Fixed bug in generation of includes corresponding to included
          IDL files, where the path of the -o option (if used) was
          mistakenly applied. Thanks to Trent Nadeau
          <Trent dot Nadeau at ngc dot com> for reporting the problem.

Thu May  6 19:35:19 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/ast_module.h:
        * TAO_IDL/be/be_visitor_connector/connector_dds_ex_base.cpp:
        * TAO_IDL/ast/ast_visitor_tmpl_module_inst.cpp:
        * TAO_IDL/ast/ast_module.cpp:
        
          Added member + accessors to AST_Module pointing to the
          template module instantiation that created it, if any.
          Provides a more reliable lookup of the instantiation,
          and thus its associated template arguments, than relying
          on scoping assumptions as was done previously.

Thu May  6 15:30:43 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/connector_dds_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp: