@@ -1,3 +1,11 @@
+Tue May 11 17:44:52 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_codegen.cpp(gen_exec_idl_includes):
+        
+          In iteration over the list of '#pragma ciao lem' files,
+          added a check to ensure that the exec IDL file doesn't
+          include itself. 
+
 Fri May  7 13:37:44 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 
         * orbsvcs/tests/AVStreams/Simple_Two_Stage/sender.cpp (pace_data):
